[gd_scene load_steps=3 format=3]

[ext_resource type="Script" uid="uid://ji08tvlk3vfq" path="res://horror_ui_ui_scenes/ui/InventoryScreen.gd" id="1"]

[node name="InventoryScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DarkOverlay" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)

[node name="Panel" type="PanelContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.85

[node name="HBoxContainer" type="HBoxContainer" parent="Root/Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItemsGrid" type="GridContainer" parent="Root/Panel/HBoxContainer"]
layout_mode = 2
columns = 4

[node name="DescriptionVBox" type="VBoxContainer" parent="Root/Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ItemNameLabel" type="Label" parent="Root/Panel/HBoxContainer/DescriptionVBox"]
layout_mode = 2
text = ""
horizontal_alignment = 0

[node name="ItemDescriptionLabel" type="Label" parent="Root/Panel/HBoxContainer/DescriptionVBox"]
layout_mode = 2
text = ""
autowrap_mode = 2